--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <img src='img/preloader.gif' alt="3-gears" id="preloader-gif" class="preloader-gif"/>
 </div>
 <!-- begin of project-->
-<div class="wrapper">
-    <main id="main">
-        <div id="header">
+<div class="wrapper outer-container">
+    <main id="main" class="main">
+        <div id="header" class="header">
             <h1 class='header_title' id="title">Simple ToDo App</h1>
         </div>
         <div id="add-container">
