Remove some erraneously code, improve responsiveness for smart phones

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <label class="custom" >
                 <input autocomplete="on" class="checkbox" name="item"
                        type="checkbox"/>
-                <span class="item"></span>
+                <span autocomplete="on" class="item"></span>
                 <span class="checkmark"></span>
             </label>
             <span class="custom-label">
